# csafestring

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  csafestring.c  csafestring.h
example/: CMakeLists.txt  example.c
test/: CMakeLists.txt  testcases.c
